[project]
name = "plant-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.1",
    "matplotlib>=3.10.7",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
